add_executable(VVTest       vv_test.cpp)
add_executable(VVTestMsging msging_test.cpp)
add_executable(VVTestLua    lua_test.cpp)
add_executable(VVTestRT     rt_test.cpp)
add_executable(VVTestSQLDB  sqldb_test.cpp)

TARGET_LINK_LIBRARIES(VVTest       lalrt_support ${Boost_LIBRARIES} ${BOOST_SUPPORT_LIBS} ${POCO_LIBRARIES})
TARGET_LINK_LIBRARIES(VVTestMsging lalrt_support ${Boost_LIBRARIES} ${BOOST_SUPPORT_LIBS} ${POCO_LIBRARIES})
TARGET_LINK_LIBRARIES(VVTestLua    lalrt_support ${Boost_LIBRARIES} ${BOOST_SUPPORT_LIBS} ${POCO_LIBRARIES})
if (MSYS)
    TARGET_LINK_LIBRARIES(VVTestRT     lalrt_support ${Boost_LIBRARIES} ${BOOST_SUPPORT_LIBS} ${POCO_LIBRARIES} -lws2_32)
else()
    TARGET_LINK_LIBRARIES(VVTestRT     lalrt_support ${Boost_LIBRARIES} ${BOOST_SUPPORT_LIBS} ${POCO_LIBRARIES})
endif()
TARGET_LINK_LIBRARIES(VVTestSQLDB  lalrt_support ${Boost_LIBRARIES} ${BOOST_SUPPORT_LIBS} ${POCO_LIBRARIES})
